--- a/vvarscNET/vvarscNET.Web.API/Web.config
+++ b/vvarscNET/vvarscNET.Web.API/Web.config
@@ -10,7 +10,7 @@
 
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="C:/logs/AdminConsole-Web-Api.log" />
+      <file value="C:/logs/vvarscnet-Web-Api.log" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
       <maxSizeRollBackups value="30" />
@@ -27,7 +27,7 @@
   </log4net>
   
   <appSettings>
-    <add key="CoreDB_ConnectionString" value="data source=localhost;initial catalog={0};Trusted_Connection=True;MultipleActiveResultSets=True;App=AdminConsoleAPI" />
+    <add key="CoreDB_ConnectionString" value="data source=localhost;initial catalog={0};Trusted_Connection=True;MultipleActiveResultSets=True;App=vvarscNET" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
