--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -44,19 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandHandlers\Authentication\ExpireAccessToken_CH.cs" />
-    <Compile Include="CommandHandlers\Authentication\CreateAccessToken_CH.cs" />
-    <Compile Include="CommandHandlers\Members\UpdateMember_CH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryHandlers\Accounts\ListActiveShells_QH.cs" />
-    <Compile Include="QueryHandlers\Authentication\GetAccessTokenByPID_QH.cs" />
-    <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
-    <Compile Include="QueryHandlers\Authentication\AuthenticateMember_QH.cs" />
-    <Compile Include="QueryHandlers\Groups\ListGroupsByShellAndGroupType_QH.cs" />
-    <Compile Include="QueryHandlers\Members\GetMemberByAccessToken_QH.cs" />
-    <Compile Include="QueryHandlers\Members\GetMemberByPID_QH.cs" />
-    <Compile Include="QueryHandlers\Modules\ListLibraryModulesForShell_QH.cs" />
-    <Compile Include="QueryHandlers\Modules\ListFeedModulesForShell_QH.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vvarscNET.Core\vvarscNET.Core.csproj">
@@ -70,6 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="QueryHandlers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
