--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -41,24 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RequestModels\Authentication\RenewTokenRequestModel.cs" />
-    <Compile Include="RequestModels\Authentication\LogoutMemberRequestModel.cs" />
-    <Compile Include="RequestModels\Authentication\AuthenticateMemberRequestModel.cs" />
-    <Compile Include="RequestModels\Members\UpdateMemberRequestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResponseModels\Accounts\ListShells_QRM.cs" />
-    <Compile Include="ResponseModels\Authentication\GetAccessToken_QRM.cs" />
-    <Compile Include="ResponseModels\Authentication\CreateAccessToken_CRM.cs" />
-    <Compile Include="ResponseModels\Authentication\AuthenticateMember_QRM.cs" />
-    <Compile Include="ResponseModels\Groups\ListGroupsByShellAndGroupType_QRM.cs" />
-    <Compile Include="ResponseModels\Members\GetMemberByAccessToken_QRM.cs" />
-    <Compile Include="ResponseModels\Members\GetMemberByPID_QRM.cs" />
-    <Compile Include="ResponseModels\Modules\ListLibraryModulesForShell_QRM.cs" />
-    <Compile Include="ResponseModels\Modules\ListFeedModulesForShell_QRM.cs" />
-    <Compile Include="ResponseModels\Operations\ClientRegistration.cs" />
     <Compile Include="Result\Result.cs" />
     <Compile Include="Security\AccessToken.cs" />
     <Compile Include="Security\JwtApiToken.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RequestModels\" />
+    <Folder Include="ResponseModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
