final project API setup including basic authentication

--- a/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
+++ b/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\_output\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -48,6 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandModels\Authentication\CreateAccessToken_C.cs" />
+    <Compile Include="CommandModels\Authentication\ExpireAccessToken_C.cs" />
+    <Compile Include="Decorators\ValidateAccessTokenPre_QH_Decorator.cs" />
+    <Compile Include="Decorators\ValidateUserContextPre_CH_Decorator.cs" />
     <Compile Include="Dispatchers\CommandDispatcher.cs" />
     <Compile Include="Dispatchers\PermissionQueryDispatcher.cs" />
     <Compile Include="Dispatchers\QueryDispatcher.cs" />
@@ -65,6 +69,11 @@
     <Compile Include="Interfaces\IQueryHandler.cs" />
     <Compile Include="Interfaces\ITokenService.cs" />
     <Compile Include="Interfaces\IUserContext.cs" />
+    <Compile Include="QueryModels\Authentication\AuthenticateMember_Q.cs" />
+    <Compile Include="QueryModels\Authentication\GetAccessTokenByValue_Q.cs" />
+    <Compile Include="QueryModels\Authentication\GetLatestMemberAccessToken_Q.cs" />
+    <Compile Include="QueryModels\Members\GetMemberByAccessToken_Q.cs" />
+    <Compile Include="QueryModels\Members\GetMemberByID_Q.cs" />
     <Compile Include="UserContext.cs" />
     <Compile Include="Logger\ApiLogEntry.cs" />
     <Compile Include="Logger\LogEntry.cs" />
@@ -80,11 +89,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CommandModels\" />
-    <Folder Include="Decorators\" />
-    <Folder Include="QueryModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
