--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>_output\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,14 +42,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestModels\Authentication\AuthenticateMemberRequestModel.cs" />
+    <Compile Include="RequestModels\Authentication\LogoutMemberRequestModel.cs" />
+    <Compile Include="RequestModels\Authentication\RenewTokenRequestModel.cs" />
+    <Compile Include="ResponseModels\Authentication\AuthenticateMember_QRM.cs" />
+    <Compile Include="ResponseModels\Authentication\CreateAccessToken_CRM.cs" />
+    <Compile Include="ResponseModels\Authentication\GetAccessToken_QRM.cs" />
+    <Compile Include="ResponseModels\Members\GetMemberByAccessToken_QRM.cs" />
+    <Compile Include="ResponseModels\Members\GetMemberByID_QRM.cs" />
     <Compile Include="Result\Result.cs" />
     <Compile Include="Security\AccessToken.cs" />
     <Compile Include="Security\JwtApiToken.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="RequestModels\" />
-    <Folder Include="ResponseModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
