--- a/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
+++ b/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
@@ -69,8 +69,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandModels\Authentication\CreateCredential_C.cs" />
     <Compile Include="CommandModels\Authentication\CreateAccessToken_C.cs" />
     <Compile Include="CommandModels\Authentication\ExpireAccessToken_C.cs" />
+    <Compile Include="CommandModels\Organizations\CreateOrganization_C.cs" />
+    <Compile Include="CommandModels\People\CreateMember_C.cs" />
     <Compile Include="Decorators\ValidateAccessTokenPre_QH_Decorator.cs" />
     <Compile Include="Decorators\ValidateUserContextPre_CH_Decorator.cs" />
     <Compile Include="Dispatchers\CommandDispatcher.cs" />
@@ -93,8 +96,10 @@
     <Compile Include="QueryModels\Authentication\AuthenticateMember_Q.cs" />
     <Compile Include="QueryModels\Authentication\GetAccessTokenByValue_Q.cs" />
     <Compile Include="QueryModels\Authentication\GetLatestMemberAccessToken_Q.cs" />
-    <Compile Include="QueryModels\Members\GetMemberByAccessToken_Q.cs" />
-    <Compile Include="QueryModels\Members\GetMemberByID_Q.cs" />
+    <Compile Include="QueryModels\Organizations\GetOrganizationByID_Q.cs" />
+    <Compile Include="QueryModels\People\GetMemberByAccessToken_Q.cs" />
+    <Compile Include="QueryModels\People\GetMemberByID_Q.cs" />
+    <Compile Include="QueryModels\Organizations\GetOrganizationBySpectrumID_Q.cs" />
     <Compile Include="UserContext.cs" />
     <Compile Include="Logger\ApiLogEntry.cs" />
     <Compile Include="Logger\LogEntry.cs" />
