--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\StatusEnum.cs" />
     <Compile Include="Enums\UserTypeEnum.cs" />
+    <Compile Include="Objects\Organizations\Organization.cs" />
+    <Compile Include="Objects\People\Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\Authentication\AuthenticateMemberRequestModel.cs" />
     <Compile Include="RequestModels\Authentication\LogoutMemberRequestModel.cs" />
@@ -53,8 +56,8 @@
     <Compile Include="ResponseModels\Authentication\AuthenticateMember_QRM.cs" />
     <Compile Include="ResponseModels\Authentication\CreateAccessToken_CRM.cs" />
     <Compile Include="ResponseModels\Authentication\GetAccessToken_QRM.cs" />
-    <Compile Include="ResponseModels\Members\GetMemberByAccessToken_QRM.cs" />
-    <Compile Include="ResponseModels\Members\GetMemberByID_QRM.cs" />
+    <Compile Include="ResponseModels\People\GetMemberByAccessToken_QRM.cs" />
+    <Compile Include="ResponseModels\People\GetMemberByID_QRM.cs" />
     <Compile Include="Result\Result.cs" />
     <Compile Include="Security\AccessToken.cs" />
     <Compile Include="Security\JwtApiToken.cs" />
