--- a/vvarscNET/vvarscNET.Web.API/vvarscNET.Web.API.csproj
+++ b/vvarscNET/vvarscNET.Web.API/vvarscNET.Web.API.csproj
@@ -225,6 +225,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\OrganizationsController.cs" />
     <Compile Include="Controllers\ServerDataController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
