--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryHandlers\Members\GetMemberByAccessToken_QH.cs" />
     <Compile Include="QueryHandlers\Members\GetMemberByID_QH.cs" />
+    <Compile Include="QueryHandlers\Organizations\ListOrganizations_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrganizationByID_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrganizationBySpectrumID_QH.cs" />
   </ItemGroup>
