controllers now enforce proper session and userType for access to pages

--- a/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
+++ b/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
@@ -193,7 +193,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\OrganizationsController.cs" />
+    <Compile Include="Controllers\Admin_OrganizationsController.cs" />
     <Compile Include="Controllers\SecuredHomeController.cs" />
     <Compile Include="Controllers\ServerDataController.cs" />
     <Compile Include="Global.asax.cs">
@@ -205,7 +205,7 @@
     <Compile Include="Services\AuthenticationRestClient.cs" />
     <Compile Include="Services\OrganizationsRestClient.cs" />
     <Compile Include="Services\ServerDataRestClient.cs" />
-    <Compile Include="Helper\SessionCheck.cs" />
+    <Compile Include="Helper\HelperFunctions.cs" />
     <Compile Include="Models\ServerDataModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -320,7 +320,9 @@
     <Content Include="Views\Authentication\Login.cshtml" />
     <Content Include="Views\SecuredHome\Index.cshtml" />
     <Content Include="Views\Home\Logout.cshtml" />
-    <Content Include="Views\Organizations\Index.cshtml" />
+    <Content Include="Views\Admin_Organizations\Index.cshtml" />
+    <Content Include="Views\Home\Unauthorized.cshtml" />
+    <Content Include="Views\Home\Forbidden.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
