--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -54,6 +54,7 @@
     <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryHandlers\Members\GetMemberByAccessToken_QH.cs" />
+    <Compile Include="QueryHandlers\Members\ListMembersForOrganization_QH.cs" />
     <Compile Include="QueryHandlers\Members\GetMemberByID_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListOrganizations_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrganizationByID_QH.cs" />
