--- a/vvarscNET/vvarscNET.Core.Service/vvarscNET.Core.Service.csproj
+++ b/vvarscNET/vvarscNET.Core.Service/vvarscNET.Core.Service.csproj
@@ -50,8 +50,10 @@
   <ItemGroup>
     <Compile Include="Interfaces\IAuthenticationService.cs" />
     <Compile Include="Interfaces\IService.cs" />
+    <Compile Include="Interfaces\QueryServices\IMemberQueryService.cs" />
     <Compile Include="Interfaces\QueryServices\IOrganizationQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryServices\MemberQueryService.cs" />
     <Compile Include="QueryServices\OrganizationQueryService.cs" />
     <Compile Include="Security\AuthenticationService.cs" />
   </ItemGroup>
