--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -48,6 +48,8 @@
     <Compile Include="CommandHandlers\Authentication\CreateAccessToken_CH.cs" />
     <Compile Include="CommandHandlers\Authentication\ExpireAccessToken_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\CreateOrganization_CH.cs" />
+    <Compile Include="CommandHandlers\People\CreateRank_CH.cs" />
+    <Compile Include="CommandHandlers\People\CreatePayGrade_CH.cs" />
     <Compile Include="CommandHandlers\People\CreateMember_CH.cs" />
     <Compile Include="QueryHandlers\Authentication\AuthenticateMember_QH.cs" />
     <Compile Include="QueryHandlers\Authentication\GetAccessTokenByValue_QH.cs" />
