--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Enums\UserTypeEnum.cs" />
     <Compile Include="Objects\Organizations\Organization.cs" />
     <Compile Include="Objects\People\Member.cs" />
+    <Compile Include="Objects\People\PayGrade.cs" />
+    <Compile Include="Objects\People\Rank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\Authentication\AuthenticateMemberRequestModel.cs" />
     <Compile Include="RequestModels\Authentication\LogoutMemberRequestModel.cs" />
