--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ResponseModels\Authentication\AuthenticateMember_QRM.cs" />
     <Compile Include="ResponseModels\Authentication\CreateAccessToken_CRM.cs" />
     <Compile Include="ResponseModels\Authentication\GetAccessToken_QRM.cs" />
+    <Compile Include="ResponseModels\People\Rank_QRM.cs" />
     <Compile Include="Result\Result.cs" />
     <Compile Include="Security\AccessToken.cs" />
     <Compile Include="Security\JwtApiToken.cs" />
