--- a/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
+++ b/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
@@ -337,6 +337,7 @@
     <Content Include="Views\Admin\Organization.cshtml" />
     <Content Include="Views\Admin\OrganizationMembers.cshtml" />
     <Content Include="Views\Admin\CreateMember.cshtml" />
+    <Content Include="Views\Admin\EditMember.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
