--- a/vvarscNET/vvarscNET.Core.Service/vvarscNET.Core.Service.csproj
+++ b/vvarscNET/vvarscNET.Core.Service/vvarscNET.Core.Service.csproj
@@ -48,8 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\CommandServices\PeopleCommandService.cs" />
-    <Compile Include="Interfaces\IPeopleCommandService.cs" />
+    <Compile Include="CommandServices\PeopleCommandService.cs" />
+    <Compile Include="Interfaces\CommandServices\IPeopleCommandService.cs" />
     <Compile Include="Interfaces\IAuthenticationService.cs" />
     <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Interfaces\QueryServices\IPeopleQueryService.cs" />
@@ -77,9 +77,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CommandServices\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
