--- a/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
+++ b/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CommandModels\Authentication\ExpireAccessToken_C.cs" />
     <Compile Include="CommandModels\Organizations\CreateOrganization_C.cs" />
     <Compile Include="CommandModels\People\CreateMemberRankHistory_C.cs" />
+    <Compile Include="CommandModels\People\DeleteMember_C.cs" />
     <Compile Include="CommandModels\People\UpdateMember_C.cs" />
     <Compile Include="CommandModels\People\CreateMember_C.cs" />
     <Compile Include="CommandModels\People\CreateOrgRole_C.cs" />
