--- a/vvarscNET/vvarscNET.Web.Client/packages.config
+++ b/vvarscNET/vvarscNET.Web.Client/packages.config
@@ -36,6 +36,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net45" />
+  <package id="toastr" version="2.1.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="WebMatrix.Data" version="2.0.30506.0" targetFramework="net45" />
 </packages>
