--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Enums\UserTypeEnum.cs" />
     <Compile Include="Objects\Organizations\Organization.cs" />
     <Compile Include="Objects\People\Member.cs" />
-    <Compile Include="Objects\People\OrgRole.cs" />
+    <Compile Include="Objects\Organizations\OrgRole.cs" />
     <Compile Include="Objects\People\PayGrade.cs" />
     <Compile Include="Objects\People\Rank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
