--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -60,8 +60,10 @@
     <Compile Include="QueryHandlers\Authentication\GetAccessTokenByValue_QH.cs" />
     <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandlers\Organizations\GetOrgRoleByID_QH.cs" />
     <Compile Include="QueryHandlers\People\GetMemberByAccessToken_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListRolesForOrganization_QH.cs" />
+    <Compile Include="QueryHandlers\People\ListPayGrades_QH.cs" />
     <Compile Include="QueryHandlers\People\ListRanks_QH.cs" />
     <Compile Include="QueryHandlers\People\ListMembersForOrganization_QH.cs" />
     <Compile Include="QueryHandlers\People\GetMemberByID_QH.cs" />
